perf(order): parallelize reserveStock + createOrder via virtual threads
OrderCreationSaga steps 2 and 3 are independent (createOrder doesn't need
reservationId, reserveStock doesn't need persisted order) so they fan out
on a virtual-thread executor. Wall-clock cost becomes max(stepA, stepB)
instead of stepA + stepB.

Used CompletableFuture + Executors.newThreadPerTaskExecutor with virtual
thread factory rather than JDK 21 preview StructuredTaskScope to keep
the build free of --enable-preview flags.

Compensation path adjusted: when reservation fails after createOrder
already persisted, we cancel the speculative order via
updateOrderStatus(CANCELLED) + publishOrderCancelledEvent.

Tests: 7/7 OrderCreationSagaTest pass; new test asserts 240ms sequential
floor compresses to under 200ms parallel ceiling.